--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                       <tr>
                         <th style="text-align:center">Factor/Proteins</th>
                         <th style="text-align:center">ICR</th>
-                        <th style="text-align:center">RawDataSource_GEO</th>
+                        <th style="text-align:center">RawDataSource:GEO</th>
                       </tr>
                         <tr>
                         <td style ="text-align:center"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Usp7_GSM471159_peaks.bed">USP7</a></td>
