--- a/download.html
+++ b/download.html
@@ -18,9 +18,10 @@
 <div class="menu-bar">
 <ul>
 <li class="active"><a href="index.html">Home</a></li>
-<li class="active"><a href="#">About me</a></li>
+<li class="active"><a href="#">About</a></li>
 <li class="active"><a href="download.html">Download</a></li>
-<li class="active"><a href="https://ankitvermax.mystrikingly.com">Contact Us</a></li>
+<li class="active"><a href="visualize.html">Visualization</a></li>
+<li class="active"><a href="https://ankitvermax.mystrikingly.com">Contact</a></li>
 </ul>
 </div>
 <br /><br />
