--- a/visualize.html
+++ b/visualize.html
@@ -14,7 +14,7 @@
 <div class="menu-bar">
 <ul>
 <li class="active"><a href="index.html">Home</a></li>
-<li class="active"><a href="about.html">About</a></li>
+<li class="active"><a href="#">About</a></li>
 <li class="active"><a href="download.html">Download</a></li>
 <li class="active"><a href="visualize.html">Visualization</a></li>
 <li class="active"><a href="https://ankitvermax.mystrikingly.com">Contact</a></li>
