--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8" />
 <div class="header">
-    <h1>PeakNBin</h1>
+    <h1>PeaknBin</h1>
     <p>Repository of ChIP-Seq peaks in mouse embryonic stem cells</p>
 </div>
 	<title>PeaknBin</title>
