--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </div>
 <br /><br />
 <br /><br />
+<div class="box"></div>
 <p style="text-align:center;"><label>Select the peak file: </label></p><br /><br />
 <p style="text-align:center;"><label> Choose the File to upload: </label></p><br /><br />
 <p style="text-align:center;"><input type="file" id="myFile" /><br /><br />
