--- a/index.html
+++ b/index.html
@@ -18,30 +18,31 @@
 <li class="active"><a href="download.html">Download</a></li>
 <li class="active"><a href="visualize.html">Visualization</a></li>
 <li class="active"><a href="https://ankitvermax.mystrikingly.com">Contact</a></li>
+
 </ul>
 </div>
 <br /><br />
-<br /><br />
 <div class="box">
-<p style="text-align:center;"><label>Select the peak file: </label></p><br /><br />
+<p style="text-align:center;"><label><b><font size="6">Select the Peak file</font></b></label></p><br /><br />
 <p style="text-align:center;"><label> Choose the File to upload: </label></p><br /><br />
 <p style="text-align:center;"><input type="file" id="myFile" /><br /><br />
 </div>
 <br /><br />
-<br /><br />
 
-
-<p style="text-align:center;"><label> Select the ICR file: </label></p><br /><br />
+<div class="box">
+<p style="text-align:center;"><label><b><font size="6">Select the Bin file</font></b></label></p><br /><br />
 <p style="text-align:center;"><label> Choose the File to upload: </label></p><br /><br />
 <p style="text-align:center;"><input type="file" id="myFile" /><br /><br />
-
-<br /><br />
+</div>
 <div class="sequence_input" id="sequences">
-<br /><br />
 
 </div>
-<p style="text-align:center;"><label> Intersect: </label></p><br /><br />
+
+<br /><br />
+<br /><br />
+<div class="box1">
+<p style="text-align:center;;font-size:160%;;"><label><b><font size="6" >Intersect</font></b></label></p><br /><br />
 
 <p style="text-align:center;"><input type="button" id='Intersect' name="scriptbutton" value=" Intersect " onclick="goPython()"></p> <br /><br />
-
+</div>
 </body>
