--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
 </div>
 <br /><br />
 <div class="box">
-<p style="text-align:center;"><label><b><font size="6">Select the Peak file</font></b></label></p><br /><br />
-<p style="text-align:center;"><label> Choose the File to upload: </label></p><br /><br />
-<p style="text-align:center;"><input type="file" id="myFile" /><br /><br />
+<p style="text-align:center;"><label><b><font size="5">Select the Peak file</font></b></label></p><br><br>
+<p style="text-align:center;"><label> Choose the File to upload: </label></p>
+<p style="text-align:center;"><label style="font-size:10px;"><i> Format: chr   start   end   ID  </i></label></p><br><br>
+<p style="text-align:center;"><input type="file" id="myFile" size="50"></p><br><br>
 </div>
 <br /><br />
 
 <div class="box">
-<p style="text-align:center;"><label><b><font size="6">Select the Bin file</font></b></label></p><br /><br />
-<p style="text-align:center;"><label> Choose the File to upload: </label></p><br /><br />
-<p style="text-align:center;"><input type="file" id="myFile" /><br /><br />
+<p style="text-align:center;"><label><b><font size="5">Select the Bin file</font></b></label></p><br><br>
+<p style="text-align:center;"><label> Choose the File to upload: </label></p>
+<p style="text-align:center;"><label style="font-size:10px;"><i> Format: chr   start   end   ID </i></label></p><br><br>
+<p style="text-align:center;"><input type="file" id="myFile" size="50"></p><br><br>
 </div>
 <div class="sequence_input" id="sequences">
 
@@ -41,8 +43,8 @@
 <br /><br />
 <br /><br />
 <div class="box1">
-<p style="text-align:center;;font-size:160%;;"><label><b><font size="6" >Intersect</font></b></label></p><br /><br />
+<p style="text-align:center;;font-size:160%;;"><label><b><font size="5" >Intersect</font></b></label></p>
 
-<p style="text-align:center;"><input type="button" id='Intersect' name="scriptbutton" value=" Intersect " onclick="goPython()"></p> <br /><br />
+<p style="text-align:center;"><input type="button" id='Intersect' name="scriptbutton" value=" Intersect " onclick="goPython()"></p><br><br>
 </div>
 </body>
