--- a/visualize.html
+++ b/visualize.html
@@ -17,7 +17,7 @@
 <li class="active"><a href="#">About</a></li>
 <li class="active"><a href="download.html">Download</a></li>
 <li class="active"><a href="visualize.html">Visualization</a></li>
-<li class="active"><a href="https://ankitvermax.mystrikingly.com">Contact</a></li>
+<li class="active"><a href="https://github.com/ankitasks1/PeaknBin" target="_blank">Connect</a></li>
 </ul>
 </div>
 <br /><br />
