--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </ul>
 </div>
-<br /><br />
+<br>
 <div class="box">
 <p style="text-align:center;"><label><b><font size="5">Select the Peak file</font></b></label></p><br><br>
 <p style="text-align:center;"><label> Choose the File to upload: </label></p>
@@ -43,8 +43,7 @@
     </script>
 <p style="text-align:center;"><input type="file" id="myFile" size="50" accept='text/plain' onchange='openFile(event)'></p><br><br>
 </div>
-<br /><br />
-
+<br>
 <div class="box">
 <p style="text-align:center;"><label><b><font size="5">Select the Bin file</font></b></label></p><br><br>
 <p style="text-align:center;"><label> Choose the File to upload: </label></p>
@@ -52,17 +51,13 @@
 <p style="text-align:center;"><input type="file" id="myFile" size="50"></p><br><br>
 </div>
 <div class="sequence_input" id="sequences">
-
 </div>
-
-<br /><br />
-<br /><br />
+<br>
 <div class="box1">
-<p style="text-align:center;;font-size:160%;;"><label><b><font size="5" >Intersect</font></b></label></p>
-
-<p style="text-align:center;"><input type="button" id='Intersect' name="scriptbutton" value=" Intersect " onclick="goPython()"></p><br><br>
+<p style="text-align:center;;font-size:160%;;"><label><b><font size="5" >Intersect Peak and Bin Files</font></b></label></p>
+<br>
+<p style="text-align:center;"><input type="button" id='Intersect Peak and Bin Files' name="scriptbutton" value=" Intersect " onclick="goPython()"></p><br><br>
 </div>
-
 
 
 </body>
