--- a/download.html
+++ b/download.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
 <div class="header">
-    <h1><a href="index.html">PeaknBin</a></h1>
+    <h1><a  style="text-decoration:none; color:white" href="index.html">PeaknBin</a></h1>
     <p>Repository of ChIP-Seq peaks in mouse embryonic stem cells</p>
 </div>
 	<title>PeaknBin</title>
