--- a/download.html
+++ b/download.html
@@ -20,7 +20,8 @@
 <li class="active"><a href="index.html">Home</a></li>
 <li class="active"><a href="about.html">About</a></li>
 <li class="active"><a href="download.html">Download</a></li>
-<li class="active"><a href="visualize.html">Visualization</a></li>
+<li class="active"><a href="visualizemm9.html">Visualization-mm9</a></li>
+<li class="active"><a href="visualizemm10.html">Visualization-mm10</a></li>
 <li class="active"><a href="https://github.com/ankitasks1/PeaknBin" target="_blank">Connect</a></li>
 </ul>
 </div>
