--- a/visualizemm10.html
+++ b/visualizemm10.html
@@ -32,11 +32,83 @@
 
 <p style="font-size:200%;" align="center">Mouse: mm10 version</p><br>
 
-<table style="width:50%">
-<tr><th style="text-align:left">Factor/Proteins</th></tr>
-<tr><td style ="text-align:left">GSM471159</td></tr>
-</table>
-
 <iframe src="https://genome.ucsc.edu/s/ARiccio/moesbar_session_5"  frameborder="3" scrolling="yes" width="1500" height="600" align="right" title="mm10"></iframe>
+
+<br><br><br><br><br>
+<hr style="width:100%;text-align:left;margin-left:0">
+
+<br><br>
+<p style="font-size:200%;" align="center">Bigwig files links</p><br>
+<br><br>
+
+
+<table style="width:50%">
+<tr>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+<th style ="text-align:left"> Proteins </th>
+</tr>
+<tr>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Usp7_GSM471159_peaks.bed">USP7</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/METTL3_GSM3912502x_peaks.bed">METTL3</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Sp3_peaks.bed">SP3</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Rsf1_2443539_peaks.bed">RSF1</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Smc3_GSM484423x_peaks.bed">SMC3</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Smarcad1_2425393_peaks.bed">SMARCAD1</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/YY1_DMSO_rep1_peaks.bed">YY1</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/SMAD23_GSM3346735s_peaks.bed">SMAD23</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Banp_GSM470846x_peaks.bed">BANP</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/V5_GSM4066081_peaks.bed">V5</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/RARA_GSM5233837_peaks.bed">RARA</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Ssrp1_GSM4711600_peaks.bed">SSRP1</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/MSH6_rep2_peaks.broadPeak.bed">MSH6</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Taf12_GSM539919s_peaks.bed">TAF12</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Sumo1_GSM4633466_peaks.bed">SUMO1</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Nelfa_mm10_peaks.bed">NELFA</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/EloA_GSM458619_peaks.bed">ELOA</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/RREB1_GSM3346736s_peaks.bed">RREB1</a></td>
+</tr>
+<tr>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/ZFP445_BC_GSM3177150_peaks.bed">ZFP445</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Tfcp2l1_GSM4849227x9_peaks.bed">TFCP2L1</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Sp1_peaks.bed">SP1</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Smarcad1female_mmi_peaks.bed">SMARCAD1FEMALE</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Morc3_GSM528285x_peaks.bed">MORC3</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/TEAD4_GSM2935888s_peaks.bed">TEAD4</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Hira_GSM5395232_peaks.bed">HIRA</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Cbx7_GSM4593062_peaks.bed">CBX7</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/G9A_GSM1215219_peaks.bed">G9A</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/RONIN_GSM1246868_peaks.bed">RONIN</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/WIZ_GSM407428s_peaks.bed">WIZ</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/SMAD4_GSM3563728_peaks.bed">SMAD4</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Smarcad_E14_2425393_peaks.bed">SMARCAD</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Daxx_mmi_peaks.bed">DAXX</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/ZFP445_CB_GSM3177148_peaks.bed">ZFP445</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Npac_GSM2520943_peaks.bed">NPAC</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Leo_GSM3747809s_peaks.bed">LEO</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/FOXH1_GSM3563729_peaks.bed">FOXH1</a></td>
+</tr>
+<tr>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/E2F6_GSM4487618_peaks.bed">E2F6</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Yap1_peaks.bed">YAP1</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/DDX18_GSM3537111_peaks.bed">DDX18</a></td>
+<td style ="text-align:left"> <a href="http://140.164.60.71:8080/PeakNBin/bedfiles/mm10/Zbtb2_s2716083i2716084_peaks.bed">ZBTB2</a></td>
+
+</table>
 
 </body>
