--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <li class="active"><a href="download.html">Download</a></li>
 <li class="active"><a href="visualizemm9.html">Visualization-mm9</a></li>
 <li class="active"><a href="visualizemm10.html">Visualization-mm10</a></li>
-<li class="active"><a href="https://github.com/ankitasks1/PeaknBin" target="_blank">Connect</a></li>
+<li class="active"><a href="icr.html">mouseICR</a></li>
+<li class="active"><a href="connect.html">Connect</a></li>
 
 </ul>
 </div>
@@ -47,5 +48,14 @@
 <p style="text-align:center;"><input type="button" id='Intersect Peak and Bin Files' name="scriptbutton" value=" Intersect " onclick="goPython()"></p><br><br>
 </div>
 
-
 </body>
+
+<!-- The `multiple` attribute lets users select multiple files. -->
+<input type="file" id="file-selector" multiple>
+<script>
+  const fileSelector = document.getElementById('file-selector');
+  fileSelector.addEventListener('change', (event) => {
+    const fileList = event.target.files;
+    console.log(fileList);
+  });
+</script>
