--- a/connect.html
+++ b/connect.html
@@ -30,7 +30,7 @@
 
 <p style="font-size:200%;" align="center">Github</p><br>
 
-<iframe src="https://github.com/ankitasks1/PeaknBin"  frameborder="3" scrolling="yes" width="1500" height="600" align="right" title="mm10"></iframe>
+<iframe src="https://github.com/ankitasks1/PeaknBin/"  frameborder="3" scrolling="yes" width="1500" height="600" align="right" title="mm10"></iframe>
 
 <br><br><br><br><br>
 <hr style="width:100%;text-align:left;margin-left:0">
