--- a/connect.html
+++ b/connect.html
@@ -30,10 +30,7 @@
 
 <p style="font-size:200%;" align="center">Github</p><br>
 
-<iframe src="https://github.com/ankitasks1/PeaknBin/"  frameborder="3" scrolling="yes" width="1500" height="600" align="right" title="mm10"></iframe>
-
-<br><br><br><br><br>
-<hr style="width:100%;text-align:left;margin-left:0">
+<iframe src="https://twitter.com/ankitation1"  frameborder="3" scrolling="yes" width="1500" height="600" align="right" title="Contact Page"></iframe>
 
 <br><br>
 </body>
