--- a/connect.html
+++ b/connect.html
@@ -30,7 +30,7 @@
 
 <p style="font-size:200%;" align="center">Github</p><br>
 
-<iframe src="https://twitter.com/ankitation1"  frameborder="3" scrolling="yes" width="1500" height="600" align="right" title="Contact Page"></iframe>
+<iframe src="https://github.com/ankitasks1/PeaknBin/wiki/_new"  frameborder="3" scrolling="yes" width="1500" height="600" align="right" title="Contact Page"></iframe>
 
 <br><br>
 </body>
