--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <div class="header">
-    <h1><a style="text-decoration:none; color:white"  href="index.html">PeaknBin</a></h1>
-    <p>Repository of ChIP-Seq peaks in mouse embryonic stem cells</p>
+    <h1><a style="text-decoration:none; color:black; font-family: 'Times New Roman', serif; "  href="index.html">PeaknBin</a><img  src="image.png" alt="Peak" width="80" height="80"></h1>
+    <p style="color:black;font-size:70%;">Repository of ChIP-Seq peaks in mouse embryonic stem cells</p>
 </div>
 	<title>PeaknBin</title>
 	<link rel = "stylesheet" href="style.css">
@@ -17,8 +17,8 @@
 <li class="active"><a href="index.html">Home</a></li>
 <li class="active"><a href="about.html">About</a></li>
 <li class="active"><a href="download.html">Download</a></li>
-<li class="active"><a href="visualizemm9.html">Visualization-mm9</a></li>
-<li class="active"><a href="visualizemm10.html">Visualization-mm10</a></li>
+<li class="active"><a href="visualizemm9.html">View:mm9</a></li>
+<li class="active"><a href="visualizemm10.html">View:mm10</a></li>
 <li class="active"><a href="icr.html">mouseICR</a></li>
 <li class="active"><a href="connect.html">Connect</a></li>
 
@@ -49,13 +49,3 @@
 </div>
 
 </body>
-
-<!-- The `multiple` attribute lets users select multiple files. -->
-<input type="file" id="file-selector" multiple>
-<script>
-  const fileSelector = document.getElementById('file-selector');
-  fileSelector.addEventListener('change', (event) => {
-    const fileList = event.target.files;
-    console.log(fileList);
-  });
-</script>
