--- a/visualizemm10.html
+++ b/visualizemm10.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8" />
-	<div class="header">
-		<h1><a style="text-decoration:none; color:white" href="index.html">PeaknBin</a></h1>
-		<p>Repository of ChIP-Seq peaks in mouse embryonic stem cells</p>
-	</div>
+<div class="header">
+    <h1><a style="text-decoration:none; color:black; font-family: 'Times New Roman', serif;"  href="index.html">PeaknBin</a><img  src="image.png" alt="Peak" width="80" height="80"></h1>
+    <p style="color:black;font-size:70%;">Repository of ChIP-Seq peaks in mouse embryonic stem cells</p>
+</div>
 	<title>PeaknBin</title>
 	<link rel = "stylesheet" href="style.css">
 	<link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
@@ -20,8 +21,8 @@
 <li class="active"><a href="index.html">Home</a></li>
 <li class="active"><a href="about.html">About</a></li>
 <li class="active"><a href="download.html">Download</a></li>
-<li class="active"><a href="visualizemm9.html">Visualization-mm9</a></li>
-<li class="active"><a href="visualizemm10.html">Visualization-mm10</a></li>
+<li class="active"><a href="visualizemm9.html">View:mm9</a></li>
+<li class="active"><a href="visualizemm10.html">View:mm10</a></li>
 <li class="active"><a href="icr.html">mouseICR</a></li>
 <li class="active"><a href="connect.html">Connect</a></li>
 </ul>
