--- a/connect.html
+++ b/connect.html
@@ -29,9 +29,7 @@
 </div>
 
 
-<p style="font-size:200%;" align="center">Github</p><br>
-
-<iframe src="https://github.com/ankitasks1/PeaknBin/wiki/_new"  frameborder="3" scrolling="yes" width="1500" height="600" align="right" title="Contact Page"></iframe>
+<p style="font-size:200%;" align="center">Github<a href="https://github.com/ankitasks1/PeaknBin/">PeaknBin:github</a></p><br>
 
 <br><br>
 </body>
