--- a/connect.html
+++ b/connect.html
@@ -29,7 +29,7 @@
 </div>
 
 
-<p style="font-size:200%;" align="center">Github<a href="https://github.com/ankitasks1/PeaknBin/">PeaknBin:github</a></p><br>
+<p style="font-size:200%;" align="center">Github<a href="https://github.com/ankitasks1/PeaknBin/">    PeaknBin</a></p><br>
 
 <br><br>
 </body>
