--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 </div>
 <br>
 <div class="box1">
-<p style="text-align:center;;font-size:160%;;"><label><b><font size="5" >Intersect Peak and Bin Files</font></b></label></p>
+<p style="text-align:center;;font-size:160%;;"><label><b><font size="4" >Intersect Peak and Bin File</font></b></label></p>
 <br>
-<p style="text-align:center;"><input type="button" id='Intersect Peak and Bin Files' name="scriptbutton" value=" Intersect " onclick="goPython()"></p><br><br>
+<p style="text-align:center;"><input type="button" id='Intersect Peak and Bin File' name="scriptbutton" value=" Intersect " onclick="goPython()"></p><br><br>
 </div>
 
 </body>
