--- a/index.html
+++ b/index.html
@@ -26,26 +26,23 @@
 </div>
 <br>
 <div class="box">
-<p style="text-align:center;"><label><b><font size="5">Select the Peak file</font></b></label></p><br><br>
+<p style="text-align:center;"><label><b><font size="5">Select the Peak file</font></b></label></p><br>
 <p style="text-align:center;"><label> Choose the File to upload: </label></p>
-<p style="text-align:center;"><label style="font-size:10px;"><i> Format: chr   start   end   ID  </i></label></p><br><br>
-
+<p style="text-align:center;"><label style="font-size:15px;"><i> (Format: chr   start   end   ID)  </i></label></p><br>
 <p style="text-align:center;"><input type="file" id="myFile" size="50" accept='text/plain' onchange='openFile(event)'></p><br><br>
 </div>
-<br>
 <div class="box">
-<p style="text-align:center;"><label><b><font size="5">Select the Bin file</font></b></label></p><br><br>
+<p style="text-align:center;"><label><b><font size="5">Select the Bin file</font></b></label></p><br>
 <p style="text-align:center;"><label> Choose the File to upload: </label></p>
-<p style="text-align:center;"><label style="font-size:10px;"><i> Format: chr   start   end   ID </i></label></p><br><br>
+<p style="text-align:center;"><label style="font-size:15px;"><i> (Format: chr   start   end   ID) </i></label></p><br>
 <p style="text-align:center;"><input type="file" id="myFile" size="50"></p><br><br>
 </div>
 <div class="sequence_input" id="sequences">
 </div>
-<br>
+
 <div class="box1">
-<p style="text-align:center;;font-size:160%;;"><label><b><font size="4" >Intersect Peak and Bin File</font></b></label></p>
-<br>
-<p style="text-align:center;"><input type="button" id='Intersect Peak and Bin File' name="scriptbutton" value=" Intersect " onclick="goPython()"></p><br><br>
+
+<p style="text-align:center;"><input type="button" id='Intersect Peak and Bin File' name="scriptbutton" value=" Intersect Peak and Bin File " onclick="goPython()" style="font-size : 50px;; width: 100%; height: 100px;"></p>
 </div>
 
 </body>
