--- a/download.html
+++ b/download.html
@@ -27,10 +27,9 @@
 </ul>
 </div>
 <br /><br />
-<br /><br />
       <body>
 
-          <h1 style="text-align:center">Factors/Proteins analysed in mouse embryonic stem cells</h1>
+          <h1 style="text-align:center">Factors/Proteins analysed in mouse embryonic stem cells</h1><br />
             <ul>
                 <li class="proteins">
                     <table style="width:50%">
