--- a/visualizemm10.html
+++ b/visualizemm10.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <div class="header">
-    <h1><a style="text-decoration:none; color:black; font-family: 'Times New Roman', serif;"  href="about.html">PeaknBin</a><img  src="image.png" alt="Peak" width="80" height="80"></h1>
+    <h1><a style="text-decoration:none; color:black; font-family: 'Times New Roman', serif;"  href="index.html">PeaknBin</a><img  src="image.png" alt="Peak" width="80" height="80"></h1>
     <p style="color:black;font-size:70%;">Repository of ChIP-Seq peaks in mouse embryonic stem cells</p>
 </div>
 	<title>PeaknBin</title>
@@ -18,7 +18,7 @@
 <body>
 <div class="menu-bar">
 <ul>
-<li class="active"><a href="about.html">About</a></li>
+<li class="active"><a href="index.html">About</a></li>
 <li class="active"><a href="download.html">Download</a></li>
 <li class="active"><a href="visualizemm9.html">View:mm9</a></li>
 <li class="active"><a href="visualizemm10.html">View:mm10</a></li>
