--- a/download.html
+++ b/download.html
@@ -22,12 +22,12 @@
 <li class="active"><a href="visualizemm9.html">View:mm9</a></li>
 <li class="active"><a href="visualizemm10.html">View:mm10</a></li>
 <li class="active"><a href="icr.html">mouseICR</a></li>
-<li class="active"><a href="connect.html">Connect</a></li>
+<li class="active"><a href="tools.html">Tools</a></li>
 </ul>
 </div>
 <br /><br />
       <body>
-
+          <h2 style="text-align:center">Tools to intersect two bed file can be downloaded from <a href="tools.html">Tools</a> </h2><br />
           <h1 style="text-align:center">Factors/Proteins analysed in mouse embryonic stem cells</h1><br />
             <ul>
                 <li class="proteins">
