--- a/visualizemm10.html
+++ b/visualizemm10.html
@@ -23,7 +23,7 @@
 <li class="active"><a href="visualizemm9.html">View:mm9</a></li>
 <li class="active"><a href="visualizemm10.html">View:mm10</a></li>
 <li class="active"><a href="icr.html">mouseICR</a></li>
-<li class="active"><a href="connect.html">Connect</a></li>
+<li class="active"><a href="tools.html">Tools</a></li>
 </ul>
 </div>
 <br>
