--- a/tools.html
+++ b/tools.html
@@ -23,12 +23,13 @@
 <li class="active"><a href="visualizemm9.html">View:mm9</a></li>
 <li class="active"><a href="visualizemm10.html">View:mm10</a></li>
 <li class="active"><a href="icr.html">mouseICR</a></li>
-<li class="active"><a href="connect.html">Connect</a></li>
+<li class="active"><a href="tools.html">Tools</a></li>
 </ul>
 </div>
 
 
-<p style="font-size:200%;" align="center">Github<a href="https://github.com/ankitasks1/PeaknBin/">    PeaknBin</a></p><br>
-
+<p style="font-size:200%;" align="left ">Github<a href="https://github.com/ankitasks1/PeaknBin/">    PeaknBin</a></p><br>
+<p style="font-size:200%;" align="left "><b>BED Intersector:</b></p><br><br>
+<table style="width:50%"><tr><td style ="text-align:center"><a href="https://github.com/omicsora/PeaknBin/blob/main/PeaknBin_project.py">mm10</a></td></tr></table>
 <br><br>
 </body>
