--- a/tools.html
+++ b/tools.html
@@ -29,7 +29,6 @@
 
 
 <p style="font-size:200%;" align="left ">Github<a href="https://github.com/ankitasks1/PeaknBin/">    PeaknBin</a></p><br>
-<p style="font-size:200%;" align="left "><b>BED Intersector:</b></p><br><br>
-<table style="width:50%"><tr><td style ="text-align:center"><a href="https://github.com/omicsora/PeaknBin/blob/main/PeaknBin_project.py">mm10</a></td></tr></table>
+<p style="font-size:200%;" align="left "><b><a href="https://github.com/omicsora/PeaknBin/blob/main/PeaknBin_project.py"><a href="https://github.com/omicsora/PeaknBin/blob/main/PeaknBin_project.py">BED Intersector:</b></p><br><br>
 <br><br>
 </body>
