--- a/tools.html
+++ b/tools.html
@@ -28,7 +28,7 @@
 </div>
 
 
-<p style="font-size:200%;" align="left ">Github<a href="https://github.com/ankitasks1/PeaknBin/">    PeaknBin</a></p><br>
+<p style="font-size:200%;" align="left "><a href="https://github.com/omicsora/PeaknBin/">GithHub PeaknBin Raw Files</a></p><br>
 <p style="font-size:200%;" align="left "><b><a href="https://github.com/omicsora/PeaknBin/blob/main/PeaknBin_project.py">Download BED Intersector</b></p><br><br>
 <br><br>
 </body>
